fix: bind cached source dates to response content